    Changed the tests accordingly.
  - Removed class field SERVICE_DESCRIPTOR_TYPE that was deprecated since XINS
    1.0.0-beta6.
  - Fixed bug #1063818: XINSResultParser fails if spaces exist between XML 
    elements.

* XINS/Java Common Library:
  - Added new types Float32 and Float64.
  - Added new type Base64.
  - Added a new Base64 class that perform base 64 encoding and decoding.

* Generated CAPI classes:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.

* Generation of specification documentation:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.
  - Fixed bug #1064487: The function name is not written in the examples.

* Generation of server-side Java code:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.
  - Fixed bug #1063006: log.xml with alpha DTD fails if no server reachable.
  - Fixed bug #1036854: Reset logging subsystem when reloading.
  - If the "org.xins.server.config.reload" is zero the FileWatcher won't be 
    started.

* Generation of types Java code:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.
  - Added new types float32 and float64.
  - Added new type base64.

* Logdoc:
  - Added new types float32 and float64.

* Build and release process:
  - Adapted the release process to the new XINS version format.

* Libraries:
  - Updated Apache Jakarta Commons HttpClient from 2.0.1 to 2.0.2.

* Added support for the -version argument for the xins commands.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 RELEASE CANDIDATE 3:

* Generation of specification documentation:
  - Fixed bug #1064487: The function name is not written in the examples.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 RELEASE CANDIDATE 2:
